--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>My first website</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Website</title>
+</head>
+<body>
+ <h1><mark> My Frist Website </mark></h1>
+    
+</body>
+</html>
